Syndicati - Fixes Update
Changelog:
-Gitignore Updates
-JvmArgs Removal